fix a couple of layout issues

--- a/style/universal.css
+++ b/style/universal.css
@@ -76,13 +76,11 @@ iframe {
 
 img {
     max-width: 100%;
-    display: block;
 }
 
 main {
     /* This padding is to let the text at the bottom of the page not be covered by the #website-nav-btn */
     padding-bottom: calc(var(--website-nav-btn-size) + var(--website-nav-btn-margin));
-    width: 100%;
     padding-inline: .5em;
     max-width: calc(800px + 2*.5em);
 }
